--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 
 <body>
     <h1>Hello world!</h1>
+    <p>git status</p>
+    <p>git add</p>
+    <p>git commit -m "commit"</p>
+    <p>git push</p>
 </body>
+
+
+<p></p>
 
 </html>
