--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <p>git add</p>
     <p>git commit -m "commit"</p>
     <p>git push</p>
+    <a href="gallery.html" target="_blank">перейти на gallery.html</a>
 </body>
 
 
