--- a/gallery.html
+++ b/gallery.html
@@ -12,6 +12,7 @@
     <img src="images/116290989_2646794725648920_4265052496731117143_n.jpg" alt="picture1" width="200" height="200">
     <img src="images/116564977_2646795088982217_6475702120460949928_n.jpg" alt="picture2" width="200" height="200">
     <img src="images/Без названия.png" alt="picture3" width="200" height="200">
+    <a href="index.html" target="_blank">перейти на index.html</a>
 </body>
 
 </body>
