--- a/index.html
+++ b/index.html
@@ -14,10 +14,8 @@
     <p>git add</p>
     <p>git commit -m "commit"</p>
     <p>git push</p>
+    <p>git pull</p>
     <a href="gallery.html" target="_blank">перейти на gallery.html</a>
 </body>
-
-
-<p></p>
 
 </html>
