--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <p>git commit -m "commit"</p>
     <p>git push</p>
     <p>git pull</p>
+    <p>git log</p>
     <a href="gallery.html" target="_blank">перейти на gallery.html</a>
 </body>
 
